maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:31: error: reassignment to val
			a = indic + 1
                          ^JediEscaper:37: error: reassignment to val
			a = indic + 1
                          ^JediEscaper:43: error: reassignment to val
			a = indic + 1
                          ^JediEscaper:49: error: reassignment to val
			a = indic + 1
                          ^